// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-react-add-data-attribute Arrow Function Component: Arrow Function Component 1`] = `

const Div2 = () => <div />

const DivBody = () => {
  return <div />
}

      ↓ ↓ ↓ ↓ ↓ ↓

const Div2 = () => <div data-test="__fixtures___arrowFunction_Div2_div" />

const DivBody = () => {
  return <div data-test="__fixtures___arrowFunction_DivBody_div" />
}


`;

exports[`babel-plugin-react-add-data-attribute Functional Component: Functional Component 1`] = `

function Div() {
  return <div />
}

function Nested() {
  return (
    <div>
      hello
      <div>world</div>
    </div>
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

function Div() {
  return <div data-test="__fixtures___functionComponent_Div_div" />
}

function Nested() {
  return (
    <div data-test="__fixtures___functionComponent_Nested_div">
      hello
      <div data-test="__fixtures___functionComponent_Nested_div_1">world</div>
    </div>
  )
}


`;

exports[`babel-plugin-react-add-data-attribute Property exists: Property exists 1`] = `

function Sibling() {
  return <div />
}

function Siblings() {
  return (
    <div>
      hello
      <Sibling data-test="i-exist"/>
      <Sibling/>
    </div>
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

function Sibling() {
  return <div data-test="__fixtures___propertyExists_Sibling_div" />
}

function Siblings() {
  return (
    <div data-test="__fixtures___propertyExists_Siblings_div">
      hello
      <Sibling data-test="i-exist" />
      <Sibling data-test="__fixtures___propertyExists_Siblings_Sibling" />
    </div>
  )
}


`;

exports[`babel-plugin-react-add-data-attribute Same Siblings: Same Siblings 1`] = `

function Sibling() {
  return <div />
}

function Siblings() {
  return (
    <div>
      hello
      <Sibling/>
      <Sibling/>
    </div>
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

function Sibling() {
  return <div data-test="__fixtures___sameSiblings_Sibling_div" />
}

function Siblings() {
  return (
    <div data-test="__fixtures___sameSiblings_Siblings_div">
      hello
      <Sibling data-test="__fixtures___sameSiblings_Siblings_Sibling" />
      <Sibling data-test="__fixtures___sameSiblings_Siblings_Sibling_1" />
    </div>
  )
}


`;
